--- a/style.css
+++ b/style.css
@@ -5,5 +5,5 @@
 
 body {
     font-family: Arial;
-    background-image: url("https://wallpaperscraft.com/download/books_shelf_graffiti_125860/3840x2400")
+    background-image: url("./books.jpg")
 }
