--- a/style.css
+++ b/style.css
@@ -18,11 +18,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-table tr th {
-    border: 1px solid black;
-    text-align: center;
-}
-
 table {
-    width: 100px;
+    table-layout: fixed ;
+    width: 90% ;
+    height: 90% ;
+    border-collapse: collapse ;
+    border: 5px black solid ;
+  }
+table tr th {
+    width: 90% ;
+    height: 90% ;
+    border: 1px black solid ;
+    padding: 10px ;
 }
