--- a/style.css
+++ b/style.css
@@ -18,16 +18,25 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-table {
-    table-layout: fixed ;
-    width: 90% ;
-    height: 90% ;
-    border-collapse: collapse ;
-    border: 5px black solid ;
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
   }
-table tr th {
-    width: 90% ;
-    height: 90% ;
-    border: 1px black solid ;
-    padding: 10px ;
-}
+  
+  /* Create two equal columns that sits next to each other */
+  .column {
+    flex: 100%;
+    padding: 0 4px;
+  }
+
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 500px;
+    height: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
